--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
       resourceserver:
         jwt:
           issuer-uri: http://localhost:8080/realms/mtkRealm
-          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
+#          jwk-set-uri: ${spring.security.oauth2.resourceserver.jwt.issuer-uri}/protocol/openid-connect/certs
 
 server:
   port: 8081
@@ -12,5 +12,5 @@ server:
 jwt:
   auth:
     converter:
-      resource-id: mtk rest api
+      resource-id: mtk-rest-api
       principal-attribute: preferred_username
